syntax = "proto3";

option csharp_namespace = "Treker";

package project_proto;

service ProjectWorker {

    rpc CreateProject (CreateProjectRequest) returns (CreateProjectResponse);
    rpc DeleteProject (DeleteProjectRequest) returns (DeleteProjectResponse);

}
service ProjectGetter{
  rpc GetProject (GetProjectRequest) returns (GetProjectResponse);
  rpc GetProjectTopics (GetProjectTopicsRequest) returns (GetProjectTopicsResponse);
  
}
//===============================

message CreateProjectRequest {
    int32 creator_id = 1;
    string title = 2;
}

message CreateProjectResponse {
    int32 code = 1;
    string state = 2;
    int32 project_id =3;
}
//===============================

message DeleteProjectRequest {
       int32 user_id = 1;
       int32 project_id = 2;
}

message DeleteProjectResponse {
    int32 code = 1;
    string state = 2;
}

//===============================
message GetProjectRequest {
      int32 project_id = 1;

}

message GetProjectResponse {
    string title = 1;
    string creation_date = 2;
    string creator_link = 3;
    int32 code = 4;
    string state = 5;
}

//===============================
message GetProjectTopicsRequest {
   int32 project_id = 1;
}

message GetProjectTopicsResponse {
    repeated string titles =1;
}

//===============================
